# BrainFuse_EM

./: README.txt  add_BFL_paths.m  atlasfilename.txt  compile_mex.m  job.txt  rerunthebash.sh  run_process_rest.sh
diffeomorphic_registration/: AffineGrad3D_aux.m  AffineMat2VelocityField3D_aux.m  AffineParams2Mat.m  AffineParams2Mat_aux.m  AffineWarp3D_aux.m  BFL_groupwise_reg3D.m  BFL_groupwise_reg3D_DEMO.m  BFL_iCluster.m  BFL_pairwise_affine_reg3D.m  BFL_pairwise_affine_reg3D_DEMO.m  BFL_pairwise_affine_reg3D_fast.m  BFL_pairwise_affine_reg3D_multires.m  BFL_pairwise_reg3D.m  BFL_pairwise_reg3D_DEMO.m  BFL_pairwise_reg3D_update.m  CMakeCache.txt  CMakeLists.txt  FindMatlab.cmake  Makefile  README.txt  SDCMakeMacros.txt  checkerboard_imagesc.m  cmake_install.cmake  compile_mex_example.m  compile_mex_unix.csh  compute_template_aux.m  deffieldharmonicenergy.mexa64  deffieldharmonicenergy.mexmaci  deffieldharmonicenergy.mexmaci64  deffieldjacobiandeterminant.mexa64  deffieldjacobiandeterminant.mexmaci  deffieldjacobiandeterminant.mexmaci64  deffieldjacobiandist.mexa64  deffieldjacobiandist.mexmaci  deffieldjacobiandist.mexmaci64  invcondemonsforces.mexa64  invcondemonsforces.mexmaci  invcondemonsforces.mexmaci64  invconstdemonsreg3d_aux.m  mex_deffieldharmonicenergy.cpp  (+26 more)
diffeomorphic_registration/ITKIOFactoryRegistration/: itkImageIOFactoryRegisterManager.h
misc/: MRIfspec.m  computeLabelDice.m  computeOverallDice.m  fast_compute_distance_transform.m  gaussn.m  inverse3D.m  multiply3D.m  resample_nii_volume.m
misc/toolbox_fast_marching/: eucdist2.mexa64  eucdist2.mexmaci  fm2dAniso.mexa64  fm2dAniso.mexmaci  perform_3Dredistancing.m  perform_circular_front_propagation_2d.mexa64  perform_circular_front_propagation_2d.mexmaci  perform_front_propagation_2d.mexa64  perform_front_propagation_2d.mexmaci  perform_front_propagation_3d.mexa64  perform_front_propagation_3d.mexmaci  perform_front_propagation_mesh.mexa64  perform_front_propagation_mesh.mexmaci  skeleton.mexa64  skeleton.mexmaci
segmentation/: BFL_identify_relevant_training_aux.m  BFL_labelfusion_DEMO.m  fusionEMtemp.cpp  labelfusion_forsigmatest.m  matlab.mat  readme.txt  run_BFL_original.sh  run_BFL_update_release.sh  script_launchpad_DEMO.csh  strsplit.m  temp_script.m  test.sh
temp/: .xdebug_tkmedit
